--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
     <script src="index.js" type="module" defer></script>
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
+    <div class="container">
+      <select class="breed-select"></select>
+      <p class="loader">Loading data, please wait...</p>
+      <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+      <div class="cat-info"></div>
+    </div>
   </body>
 </html>
